--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-# hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>test page</title>
+  </head>
+  <body>
+    <p>hello world!2</p>
+  </body>
+</html>
