--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <HEAD>
   
-  <script type="text/javascript" charset="utf-8">
+<script type="text/javascript" charset="utf-8">
   (function (g, e, n, es, ys) {
     g['_genesysJs'] = e;
     g[e] = g[e] || function () {
@@ -11,9 +11,10 @@
     g[e].t = 1 * new Date();
     g[e].c = es;
     ys = document.createElement('script'); ys.async = 1; ys.src = n; ys.charset = 'utf-8'; document.head.appendChild(ys);
-  })(window, 'Genesys', 'https://apps.mypurecloud.com/genesys-bootstrap/genesys.min.js', {
-    environment: 'use1',
-    deploymentId: '61caf643-f1a1-48a9-80b7-d7bfa99949d4'
+  })(window, 'Genesys', 'https://apps.inindca.com/genesys-bootstrap/genesys.min.js', {
+    environment: 'dev',
+    deploymentId: '6bb8cef5-b34f-4ef4-99e1-5d95fb4376f3',
+    debug: true
   });
 </script>
 
