--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <HR>
 
-<a href="http://somegreatsite.com">Link Name</a>
+<a href="https://chadmhansen.github.io/suppcenter/">Link to SUPPORT CENTER (chadmhansen.github.io/suppcenter)</a>
 
 is a link to another nifty site
 
