--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <HR>
 
 <a href="https://chadmhansen.github.io/suppcenter/">Link to SUPPORT CENTER (chadmhansen.github.io/suppcenter)</a>
+  <br />
+  <a href="https://gctca.github.io/crosssub/index.html">Link to Cross-sub (gctca.github.io/crosssub)</a>
 
 is a link to another nifty site
 
