--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
 is a link to another nifty site
 
+<br />
+  <a href="https://chadmhansen.github.io/masking/index.html">Link to Masking page</a>
+  
+
 <H1>This is a Header</H1>
 
 <H2>This is a Medium Header</H2>
