--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <HEAD>
   
 <script type="text/javascript" charset="utf-8">
-  (function (g, e, n, es, ys) {
+	(function (g, e, n, es, ys) {
     g['_genesysJs'] = e;
     g[e] = g[e] || function () {
       (g[e].q = g[e].q || []).push(arguments)
@@ -11,12 +11,10 @@
     g[e].t = 1 * new Date();
     g[e].c = es;
     ys = document.createElement('script'); ys.async = 1; ys.src = n; ys.charset = 'utf-8'; document.head.appendChild(ys);
-  })(window, 'Genesys', 'https://apps.inindca.com/genesys-bootstrap/cdls/genesys.min.js', {
-    environment: 'dev',
-    deploymentId: '6bb8cef5-b34f-4ef4-99e1-5d95fb4376f3',
-    debug: true
-  });
-</script>
+  })(window, 'Genesys', 'https://apps.mypurecloud.com/genesys-bootstrap/genesys.min.js', {
+    environment: 'use1',
+    deploymentId: '61caf643-f1a1-48a9-80b7-d7bfa99949d4'
+  }); </script>
 
 <TITLE>Your Title Here</TITLE>
 
@@ -34,7 +32,7 @@
   <br />
   <a href="https://gctca.github.io/crosssub/index.html">Link to Cross-sub (gctca.github.io/crosssub)</a>
 
-is a link to another nifty site
+is a link to another nifty site. Needs deploymentid update though.
 
 <br />
   <a href="https://chadmhansen.github.io/masking/index.html">Link to Masking page</a>
