--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ is a link to another nifty site. Needs deploymentid update though.
 
 <br />
   <a href="https://chadmhansen.github.io/masking/index.html">Link to Masking page</a>
+ <a href="https://chadmhansen.github.io/masking/pause/index.html">Link to Pausing page</a>
   
 
 <H1>This is a Header</H1>
